2006-03-15  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/upload-methods.sh:
	  + applied patch from Nicolas Rennert for closing #49.
	  + make sure we don't have a trailing / at the end of the RSYNC command.

2006-03-14  Alexis Sukrieh  <sukria@backup-manager.org>

	* backup-manager:
	  + Added path for /usr/bin/7z
	* lib/backup-methods.sh:
	  + Some of the basic stuff for the 7z support.
	  + Warning, the blacklist stuff is not working!
	* lib/logger.sh:
	  + umask redirected to /dev/null for getting rid of the crappy 
	    output.
	* t/t09-tarball-incremental.sh:
	  + Never make master backups in that test.
	* t/testlib.sh:
	  + Added path for /usr/bin/7z

2006-03-12  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/files.sh:
	  + Applyied patch 21 for closing #50. 
	    (Stephen Kitt)

2006-03-12  Alexis Sukrieh  <sukria@backup-manager.org>

	* Makefile:
	  + Stop rebuilding the backup-manager-upload.8 manpage ever and ever. If
	  it exists, don't rebuild it.
	* VERSION:
	  + Ready for the release 0.7.2
	* backup-manager:
	  + VERSION = 0.7.2

2006-03-11  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/actions.sh:
	  + make_archives() now chown/chmod the md5 file to
	  $BM_REPOSITORY_USER/$BM_REPOSITORY_USER.
	* lib/backup-methods.sh:
	  + minor fixes/typo
	* lib/files.sh:
	  + some formatting.

2006-03-10  Alexis Sukrieh  <sukria@backup-manager.org>

	* Setup an umask 0077 for creating files without world permissions.
	  (closes: #47)
	* Restore the original umask when exiting.

2006-03-10  Alexis Sukrieh	<sukria@backup-manager.org>

	* backup-manager:
	  + Disabled the -u flag, too much problems with the pipe method.
	* lib/backup-methods.sh:
	  + Better layout of the __exec_meta_command.
	  + Doesn't try to commit an archive if none.

2006-03-09  Alexis Sukrieh	<sukria@backup-manager.org>

	* backup-manager.conf.tpl:
	  + speak about the DVD-RW burning method (with formating).
	  + speak about the DVD method (without formating).