@@ -1,3 +1,8 @@
+2006-03-16  Alexis Sukrieh,,,  <sukria@backup-manager.org>
+
+	* lib/upload-methods.sh:
+	* t/t02-rsync.sh:
+
 2006-03-15  Alexis Sukrieh  <sukria@backup-manager.org>
 
 	* lib/upload-methods.sh:
